--- a/src/main/webapp/WEB-INF/views/book/edit.html
+++ b/src/main/webapp/WEB-INF/views/book/edit.html
@@ -5,22 +5,30 @@
     <title>Редактировать книгу</title>
 </head>
 <body>
+<b style="font-size: 30px">Редактирование книги</b>
+<br/> <br/>
 
 <form th:method="PATCH" th:action="@{/book/{id}(id=${book.getBookID()})}" th:object="${book}">
-    <label for="name">Введите название: </label>
-    <input type="text" th:field="*{name}" id="name"/>
+    <label style="font-size: 25px" for="name">Введите название: </label>
+    <input style="font-size: 20px" type="text" th:field="*{name}" id="name"/>
     <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Full Name Error</div>
     <br/>
-    <label for="author">Введите автора: </label>
-    <input type="text" th:field="*{author}" id="author"/>
+    <label style="font-size: 25px" for="author">Введите автора: </label>
+    <input style="font-size: 20px" type="text" th:field="*{author}" id="author"/>
     <div style="color:red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">Author Error</div>
     <br/>
-    <label for="year">Введите год: </label>
-    <input type="text" th:field="*{year}" id="year"/>
+    <label style="font-size: 25px" for="year">Введите год: </label>
+    <input style="font-size: 20px" type="text" th:field="*{year}" id="year"/>
     <div style="color:red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Year Error</div>
     <br/>
-    <input type="submit" value="Редактировать!"/>
+    <br/>
+    <input style="font-size: 20px" type="submit" value="Редактировать!"/>
 </form>
 
+<br/>
+
+<form th:method="GET" th:action="@{/main}">
+    <input style="font-size: 20px" type="submit" value="Вернуться на главную">
+</form>
 </body>
 </html>
