--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -5,6 +5,13 @@
     <title>Main</title>
 </head>
 <body>
-
+<hr/>
+<a style="font-size: 30px" href="/people">Люди, состоящие в библиотеке</a>
+<br>
+<br/>
+<hr/>
+<br/>
+<a style="font-size: 30px" href="/book">Все книги</a>
+<hr/>
 </body>
 </html>
