--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -6,17 +6,26 @@
     <title>New person</title>
 </head>
 <body>
+<b style="font-size: 30px">Добавление пользователя</b>
+<br/> <br/>
 
 <form th:method="POST" th:action="@{/people}" th:object="${person}">
-    <label for="FIO">Введите ФИО: </label>
-    <input type="text" th:field="*{FIO}" id="FIO"/>
+    <label style="font-size: 25px" for="FIO">Введите ФИО: </label>
+    <input style="font-size: 20px" size="30" type="text" th:field="*{FIO}" id="FIO"/>
     <div style="color:red" th:if="${#fields.hasErrors('FIO')}" th:errors="*{FIO}">Full Name Error</div>
     <br/>
-    <label for="yearOfBirth">Введите год рождения: </label>
-    <input type="text" th:field="*{yearOfBirth}" id="yearOfBirth"/>
+    <label style="font-size: 25px" for="yearOfBirth">Введите год рождения: </label>
+    <input style="font-size: 20px" size="30" type="text" th:field="*{yearOfBirth}" id="yearOfBirth"/>
     <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}">Year of birth Error</div>
     <br/>
-    <input type="submit" value="Добавить!"/>
+    <br/>
+    <input style="font-size: 20px" type="submit" value="Добавить!"/>
+</form>
+
+<br/>
+
+<form th:method="GET" th:action="@{/main}">
+    <input style="font-size: 20px" type="submit" value="Вернуться на главную">
 </form>
 
 </body>
